--- a/appjedrez/src/index.html
+++ b/appjedrez/src/index.html
@@ -41,5 +41,7 @@
       integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
   </body>
 </html>
