Update Casi Final

--- a/appjedrez/src/index.html
+++ b/appjedrez/src/index.html
@@ -43,5 +43,10 @@
     ></script>
 
     <script src="https://sdk.mercadopago.com/js/v2"></script>
+
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1f16P9FpJ1HSC19gYPCRaHnokAcw2OSA&libraries=places&callback=initMap"
+    ></script>
   </body>
 </html>
